--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
-		
+		<title>Stage_Intilak</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">		
+		</script>
 	</head>
-	
 	<body>
-		
+		<p class="red"> First Step </p>
 	</body>
 </html>
